--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
     <title>Таблица активности</title>
     <link rel="stylesheet" href="static/index.css">
     <script src="static/index.js" defer></script>
-
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
+    <link id="favicon" rel="icon" type="image/x-icon" href="static/favicon.ico">
 
 </head>
 <body>
@@ -34,5 +35,8 @@
     <button id="addRowButton">Добавить строку</button>
     <button id="calculateButton">Рассчитать критический путь</button>
 </div>
+
+    <div class="container" id="cp_info"></div>
+    <div id="chart_div"></div>
 </body>
 </html>
